Regression: No/Poor Shadow Caustics with Area Light #107365

Closed
opened 2023-04-26 11:58:40 +02:00 by Jonas-Eriksson · 3 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.18

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3
Worked: 3.5.0

Short description of error
Up until 3.5.1 shadow caustics worked for me when using an Area Light. After the update, with no changes to my scene, there are no caustics unless I increase the beam spread from 0 degrees.

Exact steps for others to reproduce the error

  • Open uploaded file
  • hide sun + light object and enable area-light object
  • Switch to viewport rendering
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.18 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` Worked: 3.5.0 **Short description of error** Up until 3.5.1 shadow caustics worked for me when using an Area Light. After the update, with no changes to my scene, there are no caustics unless I increase the beam spread from 0 degrees. **Exact steps for others to reproduce the error** - Open uploaded file - hide sun + light object and enable area-light object - Switch to viewport rendering
Jonas-Eriksson added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-26 11:58:41 +02:00
Member

Hi, thanks for the report. Can confirm the regression.

Hi, thanks for the report. Can confirm the regression.
Pratik Borhade changed title from No/Poor Shadow Caustics with Area Light to Regression: No/Poor Shadow Caustics with Area Light 2023-04-26 16:04:10 +02:00
Member

maybe affected by 09b770388a ?
@brecht ^

(not bisected, this is the only relevant commit I found in 3.5-corrective release)

maybe affected by 09b770388ae777275b2d1dd648dea302d1605c68 ? @brecht ^ (not bisected, this is the only relevant commit I found in 3.5-corrective release)

@weizhen is this something you could look into?

Maybe this only worked by accident in 3.5.0 because of the bug #107004, but I guess if it did work then it can be made to work again?

@weizhen is this something you could look into? Maybe this only worked by accident in 3.5.0 because of the bug #107004, but I guess if it did work then it can be made to work again?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-12 20:10:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107365
No description provided.