Fix #107365: keep `ls->D` fixed in MNEE for area light with zero spread